--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     solutions.
                     Conveniently network ethical e-markets with emerging web services.</p>
             </div>
-            <img class="photo-first" src="/images/desert.png" alt="Пустынные барханы">
+            <img class="photo-first" src="images/desert.png" alt="Пустынные барханы">
             <div class="wraper">
                 <h2 class="title second">Many of life’s failures are people who did not realize how close they were to
                     success when they
@@ -85,8 +85,8 @@
                     solutions.</p>
             </div>
             <ul class="photo">
-                <li><img src="/images/lake_girl.png" alt="Девушка в лодке на озере"></li>
-                <li><img src="/images/mountan_lake.png" alt="Горное озеро"></li>
+                <li><img src="images/lake_girl.png" alt="Девушка в лодке на озере"></li>
+                <li><img src="images/mountan_lake.png" alt="Горное озеро"></li>
             </ul>
             <div class="wraper">
                 <p class="text">Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently
